# microfs

./: .gitignore  CHANGES.rst  CONTRIBUTING.rst  Makefile  README.rst  microfs.py  microfs.pyi  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: test.yml
docs/: conf.py  index.rst
microfs/: __init__.py  __init__.pyi  __main__.py  exceptions.py  exceptions.pyi  lib.py  lib.pyi  main.py  main.pyi
tests/: test_lib.py  test_main.py  test_microfs.py
